Fix word wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body, html {
 * {
     box-sizing: content-box;
     touch-action: manipulation;
+    overflow-wrap: anywhere;
 }
 
 .text-section {
@@ -1429,6 +1430,10 @@ blockquote {
     display: flex;
     align-items: center;
     gap: 8px;
+}
+
+#request-alternative-body {
+    white-space: unset;
 }
 
 #request-loader-img {
